--- a/configs/CAE_DMD_CYL.yaml
+++ b/configs/CAE_DMD_CYL.yaml
@@ -1,4 +1,4 @@
-save_folder: '../../../../results/CAE_DMD/Cylinder/cyl_model_weights'
+save_folder: '../../../../results/CAE_DMD/Cylinder/model_weights'
 seq_length: 12
 num_epochs: 300
 decay_step: 20
@@ -7,3 +7,4 @@ learning_rate: 0.001
 decay_rate: 0.8
 lamb: 1.0
 patience: 50
+multi_step: 5
