--- a/configs/CAE_DMD_KOL.yaml
+++ b/configs/CAE_DMD_KOL.yaml
@@ -1,9 +1,10 @@
 save_folder: '../../../../results/CAE_DMD/KMG/kol_model_weights_FTF'
-seq_length: 12
+seq_length: 5
 num_epochs: 300
 decay_step: 20
 batch_size: 24
-learning_rate: 0.001
+learning_rate: 0.00005
 decay_rate: 0.8
+weight_decay: 1.0e-4
 lamb: 1.0
 patience: 50
