--- a/configs/CAE_Linear_CYL.yaml
+++ b/configs/CAE_Linear_CYL.yaml
@@ -1,9 +1,9 @@
 # Config for CAE_Linear
 
 train_mode: 'jointly'  # 'jointly', 'separately', 'multiply'
-jointly_save_folder: '../../../../results/CAE_Linear/Cylinder/jointly_model_weights'
-cae_save_folder: '../../../../results/CAE_Linear/Cylinder/separately_cae_model_weights'
-linear_save_folder: '../../../../results/CAE_Linear/Cylinder/separately_linear_model_weights'
+jointly_save_folder: '../../../../results/CAE_Linear/Cylinder/model_weights'
+# cae_save_folder: '../../../../results/CAE_Linear/Cylinder/separately_cae_model_weights'
+# linear_save_folder: '../../../../results/CAE_Linear/Cylinder/separately_linear_model_weights'
 seq_length: 12
 S1_epochs: 300
 S2_epochs: 80
