--- a/configs/CAE_Linear_KOL.yaml
+++ b/configs/CAE_Linear_KOL.yaml
@@ -1,8 +1,8 @@
 train_mode: 'jointly'  # 'jointly', 'separately', 'multiply'
-jointly_save_folder: '../../../../results/CAE_Linear/KMG/jointly_model_weights'
-cae_save_folder: '../../../../results/CAE_Linear/KMG/separately_cae_model_weights'
-linear_save_folder: '../../../../results/CAE_Linear/KMG/separately_linear_model_weights'
-seq_length: 10
+jointly_save_folder: '../../../../results/CAE_Linear/KMG/model_weights'
+# cae_save_folder: '../../../../results/CAE_Linear/KMG/separately_cae_model_weights'
+# linear_save_folder: '../../../../results/CAE_Linear/KMG/separately_linear_model_weights'
+seq_length: 5
 S1_epochs: 300
 S2_epochs: 100
 S3_epochs: 100
