--- a/configs/CAE_Weaklinear_CYL.yaml
+++ b/configs/CAE_Weaklinear_CYL.yaml
@@ -1,7 +1,7 @@
 train_mode: 'jointly'  # 'jointly', 'separately', 'multiply'
-jointly_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/jointly_model_weights'
-cae_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/separately_cae_model_weights'
-linear_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/separately_linear_model_weights'
+jointly_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/model_weights'
+# cae_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/separately_cae_model_weights'
+# linear_save_folder: '../../../../results/CAE_Weaklinear/Cylinder/separately_linear_model_weights'
 seq_length: 12
 S1_epochs: 300
 S2_epochs: 80
