--- a/configs/CAE_DMD_DAM.yaml
+++ b/configs/CAE_DMD_DAM.yaml
@@ -1,9 +1,6 @@
-save_folder: '../../../../results/CAE_DMD/Dam/model_weights'
 seq_length: 10
-num_epochs: 500
-decay_step: 20
-batch_size: 12
-learning_rate: 0.001
-decay_rate: 0.9
-lamb: 1.0
-patience: 50
+rank: 0
+
+use_gpu: True
+
+save_folder: "../../../../results/CAE_DMD/Dam"
