--- a/configs/CAE_DMD_CYL.yaml
+++ b/configs/CAE_DMD_CYL.yaml
@@ -1,10 +1,6 @@
-save_folder: '../../../../results/CAE_DMD/Cylinder/model_weights'
 seq_length: 12
-num_epochs: 300
-decay_step: 20
-batch_size: 24
-learning_rate: 0.001
-decay_rate: 0.8
-lamb: 1.0
-patience: 50
-multi_step: 10
+rank: 0
+
+use_gpu: True
+
+save_folder: "../../../../results/CAE_DMD/Cylinder"
